--- a/front-end-money-transfer/src/styles/Login.css
+++ b/front-end-money-transfer/src/styles/Login.css
@@ -1,10 +1,12 @@
+/* Login.css */
+
 .login-container {
   max-width: 400px;
   margin: auto;
   padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   background-color: #fff;
   margin-top: 150px;
 }
@@ -12,35 +14,52 @@
 .login-form {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
 }
 
 .form-group {
   display: flex;
   flex-direction: column;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
-label {
-  margin-bottom: 5px;
+.label {
+  font-size: 16px;
+  margin-bottom: 8px;
 }
 
-button {
-  padding: 10px;
-  background-color: #007bff;
+.input {
+  padding: 12px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.button {
+  background-color: #28a745;
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
+  padding: 12px;
+  font-size: 16px;
   cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-button:hover {
-  background-color: #0056b3;
+.button:hover {
+  background-color: #218838;
+}
+
+.login-heading {
+  font-size: 50px; /* Adjust the font size as needed */
+  text-align: center;
+  margin-bottom: 15px;
 }
 
 .register-link {
   text-align: center;
   margin-top: 15px;
+  font-size: 14px;
 }
 
 .register-link a {
